# paper-distill

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
app/: __init__.py  types.py  utils.py
app/paper_distill/: __init__.py  __main__.py  backends.py  cache.py  cli.py  exporters.py  fs.py  language.py  layout.py  models.py  prompts.py  service.py  store.py
skills/: __init__.py
skills/paper_distill/: SKILL.md  __init__.py
tests/: test_paper_distill_backends.py  test_paper_distill_cli.py  test_paper_distill_exporters.py  test_paper_distill_fs.py  test_paper_distill_layout.py  test_paper_distill_packaging.py  test_paper_distill_service.py  test_paper_distill_store.py
