[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-distill-skill-bundle"
version = "0.2.0"
description = "Standalone paper-distill skill bundle with Chinese-first distillation outputs."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Paper Distill contributors" }]
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
]

[project.scripts]
paper-distill = "app.paper_distill.cli:main"

[tool.setuptools.packages.find]
include = ["app*", "skills*"]

[tool.setuptools.package-data]
"skills.paper_distill" = ["SKILL.md"]
