[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-distill"
version = "0.2.0"
description = "Corpus-oriented paper distillation toolkit for QA and multi-turn conversation datasets."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Paper Distill contributors" }]
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
]

[project.scripts]
paper-distill = "app.paper_distill.cli:main"

[tool.setuptools.packages.find]
include = ["app*", "skills*"]

[tool.setuptools.package-data]
"skills.paper_distill" = ["SKILL.md"]
